--- a/web/projeler/pisi/pisi/node_10.html
+++ b/web/projeler/pisi/pisi/node_10.html
@@ -53,38 +53,82 @@
 
 <H3 ALIGN=center>Barış Metin</H3>
 
-<H3 ALIGN=center>(Pre-Alpha)</H3>
+<H3 ALIGN=center>(Alpha)</H3>
 <H2><A NAME="htoc10">4</A>&nbsp;&nbsp;PİSİ Tasarımı</H2>
-
-<H3><A NAME="htoc11">4.1</A>&nbsp;&nbsp;Paket Oluşturma</H3>
-Bu kısımda bir <B>PİSİ</B> paketinin oluşturulması ve kullanılması
-esnasında gerek duyulacak meta dosyalar ve süreçler netleştirilmeye
-çalışılmıştır.<BR>
+PİSİ paket sisteminin tasarımı gerekler bölümünde anlatılan kriterlere
+uygun bir şekilde yapılmıştır. Bu gerekler burada tekrar açıklanmayacak
+yalnızca PİSİ'nin temel parçaları anlatılacaktır.<BR>
 <BR>
-
-<H4><A NAME="htoc12">4.1.1</A>&nbsp;&nbsp;PSPEC Dosyası</H4>
-<B>PSPEC (PİSİ SPECification)</B> dosyası paketin oluşturulması
-için gerekli olan temel bilgiyi tanımlar. Oluşturulacak paketin ne
-olduğu, kaynağı, kim tarafından paketlendiği, kaynağa uygulanan yamalar,
-hangi başka paketlere ne tür bağımlılıklar içerdiği gibi bilgileri
-içerir.<BR>
+Paket sistemi doğrudan ikili (derlenmiş) paketler üzerinde çalışacak
+bir şekilde tasarlanmıştır. Bununla birlikte kaynak paketler üzerinden
+çalışmanın da mümkün olmasına dikkat edilmiştir. PİSİ ikili paketler
+üzerinden temel paket işlevlerini (paket kurma/kaldırma) yerine getirir.
+İkili paketler ise kaynak paketlerin PİSİ ile derlenmesi ile oluşturulur.<BR>
 <BR>
-Bir <B>PSPEC</B> dosyasından, dolayısı ile bir kaynaktan birden
-fazla paket oluşturulabilir. Örneğin kcontrol paketi kdebase-kaynaksürümü.paketsürümü.tar.gz
-kaynağından oluşturulabilecek yalnızca bir pakettir.<BR>
+Bu bağlamda, PİSİ kaynak ve ikili paketlere farklı davranmaktadır.
+Kaynak ve ikili paketlerin görünümü de farklılık sergiler. Bu bölüm
+içerisinde kaynak paketler ve ikili paketler ile ilgili detaylı bir
+anlatım yer alıyor. Fakat önce PİSİ'nin temelini oluşturan PİSİ çekirdeği/kütüphanesinin
+temel işlevlerinden bahsedeceğiz.<BR>
 <BR>
-Dosya biçimi XML'dir ve aşağıdaki etiketleri içerir. Her <B>PSPEC</B>
-dosyasında tüm etiketlerin bulunması zorunlu değildir. Bulunması zorunlu
-olan etiketler aşağıda (*) ile belirtilmiştir.<BR>
+Paket sisteminin ana işlevleri bir kütüphane (python package) tarafından
+sağlanmaktadır. Arayüzler ve yardımcı araçlar bu kütüphanenin sağladığı
+işlevleri kullanarak görevlerini yerine getirirler. Kütüphanenin temel
+görevleri aşağıdaki liste ile özetlenebilir.
+<UL><LI>
+Paket deposu işlevleri
+<UL><LI>
+depo ekleme
+<LI>depo silme
+<LI>aktif depoları listeleme
+<LI>depodan kuruluma hazır paketleri listeleme
+</UL>
+<LI>İkili paket işlevleri
+<UL><LI>
+Paket kurulumu
+<UL><LI>
+tek bir (bağımsız) paketi sisteme kurma
+<LI>depo üzerinden paket indirme ve kurma
+</UL>
+<LI>Paket kaldırma
+<UL><LI>
+kurulu bir paketi kaldırma
+</UL>
+<LI>İkili paket üzerinde yapılan diğer işlemler
+<UL><LI>
+paket hakkında bilgisi alma
+<LI>ikili paketin içeriğini açma
+<LI>ikili paket içerisinden yalnızca istenen dosya/dizini çıkarma
+</UL>
+</UL>
+<LI>Kaynak paket işlevleri
+<UL><LI>
+kaynak paket üzerinden, tanım dosyasını vererek, paket oluşturma
+<LI>paket tanım dosyalarını (PSPEC) okuma/işleme
+<LI>tanım dosyasında belirtilen uygulama kaynağını çekme
+<LI>farklı dosya tiplerini (zip, tar, tar.gz, tar.bz2) açma
+<LI>paket oluşturma betiklerini (actions.py) çalıştırma
+</UL>
+<LI>Diğer işlevler
+<UL><LI>
+Bağımlılık çözümleme
+<LI>Uzak bağlantılar ile çalışma (ftp, http, https, vb.): paket kurma,
+tanım dosyası üzerinden paket oluşturma, vb.
+<LI>Kurulu paketler veritabanını güncelleme (yeni girdi ekleme, girdi
+silme veya bir girdiyi güncelleme)
+<LI>Dosya sistemini paket işlemleri için sorgulama (bir paketin kurulumu
+için diskte yeteri kadar boş yer bulunuyor mu?)
+<LI>Dosya özetlerini (hash) oluşturma ve doğruluklarını kontrol etme.
+<LI>Paketi imzalama ve imzanın doğruluğunu kontrol etme.
+<LI><B>ÇOMAR</B> sistemi ile iletişim kurma (CSL betiklerinin <B>ÇOMAR</B>'a
+bildirilmesi, betiklerin <B>ÇOMAR</B>'dan kaldırılması)
+</UL>
+</UL>
+PİSİ işlevlerini kullanmak isteyen bir geliştirici basitçe PİSİ ile
+sağlanan pisi Python paketini kullanarak yukarıdaki işlevlere sahip
+olabilir.<BR>
 <BR>
-<B>PSPEC</B> dosyaları <B>PSPEC</B> deposunda pakete ait dizinde
-<B>pspec.xml</B> adı ile tutulurlar.<BR>
-<BR>
-Her <B>PSPEC</B> dosyası <B>PİSİ</B> etiketi (tag) altında bir
-<EM>Source</EM> ve en az bir <EM>Package</EM> olmak üzere iki
-ana bölüm içermek zorundadırlar.<BR>
-<BR>
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_9.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_11.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+<UL><LI><A HREF='./node_11.html'>PİSİ Sözlüğü</A></LI><LI><A HREF='./node_12.html'>PİSİ Kaynak Paketi</A></LI><UL><LI><A HREF='./node_12.html'>PSPEC Dosyası</A></LI></UL></UL><table class='navbar'><tbody><tr><td class='navbut'><a href='node_9.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_11.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
 
