--- a/web/projeler/pisi/pisi/node_11.html
+++ b/web/projeler/pisi/pisi/node_11.html
@@ -53,8 +53,22 @@
 
 <H3 ALIGN=center>Barış Metin</H3>
 
-<H3 ALIGN=center>(Pre-Alpha)</H3>
-<H5>PISI</H5>
+<H3 ALIGN=center>(Alpha)</H3>
+<H3><A NAME="htoc11">4.1</A>&nbsp;&nbsp;PİSİ Sözlüğü</H3>
+Bu kısa bölüm belge içerisinde sıklıkla karşılaşacağınız bazı kavramlara
+açıklamalar getirecektir.
+<UL><LI>
+<B>PİSİ:</B> Paket yönetim sisteminin adıdır.
+<LI><B>PİSİ ikili paketi:</B> Sisteme kurulmak için hazırlanmış/derlenmiş
+olan ikili pakettir.
+<LI><B>PİSİ Kaynak Paketi:</B> İkili paketlerin oluşturulduğu derlenmek
+için hazırlanmış pisi paketidir. ``PİSİ kaynak dizini'' olarak
+da isimlendirilebilir.
+<LI><B>İkili PİSİ Deposu:</B> İkili paketlerin oluşturduğu depoya verilen
+isimdir.
+<LI><B>Kaynak PİSİ Deposu:</B> Kaynak paketlerin bulunduğu depoya verilen
+isimdir.
+</UL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_10.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_12.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
