--- a/web/projeler/pisi/pisi/node_19.html
+++ b/web/projeler/pisi/pisi/node_19.html
@@ -53,42 +53,21 @@
 
 <H3 ALIGN=center>Barış Metin</H3>
 
-<H3 ALIGN=center>(Pre-Alpha)</H3>
-<H3><A NAME="htoc16">4.3</A>&nbsp;&nbsp;files.xml</H3>
-Kaynak derlendikten sonra oluşan dosyaların oluşturulan pakete göre
-<B>(Package)</B> sınıflandırılması gerekmektedir. Tek bir kaynaktan
-birden fazla paket oluşturulması, kaynağın derlenmesinden sonra oluşan
-dosyaların sınıflandırılması ile olur.<BR>
-<BR>
-files.xml dosyası paket geliştirme aracı/araçları ile oluşturularak
-paket içerisine yerleştirilir.
+<H3 ALIGN=center>(Alpha)</H3>
+<H5>Source: Bu bölümdeki bilgiler PSPEC dosyasının
+<EM>Source</EM> bölümünden alınır.</H5><!--SEC END -->
+
 <UL><LI>
-<B>Files</B>
+<B>Name</B>
+<LI><B>Homepage</B>
+<LI><B>Summary</B>
+<LI><B>Description</B>
+<LI><B>Packager</B>
 <UL><LI>
-<B>Package:</B> Dosya serisinin hangi <B><EM>SubPackage</EM></B>'i
-oluşturduğunu belirtir. (örn. mysql-devel, mysql-client, mysql-server
-, mysql-doc)
-<LI><B>File:</B> Pakete dahil edilecek bir dosyayı tarif eder.
-<UL><LI>
-<B>Path:</B> Dosyanın, paket içerisindeki yerini belirtir. <B>PISI</B>
-gereklerinden biri paketin belirtilen konuma kurulabilmesi olduğu
-için konum bilgisi bağımlı (rölatif) olarak verilir.
-<LI><B>Type</B><A NAME="FType"></A><B>:</B> Dosyanın tipini belirtir. Paket sisteme
-kurulduğunda, veritabanına bu tip tanımı ile işaretlenerek yerleştirilecektir.
-Bu tip tanımları şunlardan birisi olabileceği gibi boş da bırakılabilir:
-<FONT COLOR=navy>executable, conf, doc, sharedLib, localeData, programData,
-header</FONT>.
-<LI><B>Size:</B> Dosyanın byte cinsinden boyutunu saklar.
-<LI><B>SHA1Sum: Path</B> ile belirtilen dosyanın SHA1 algoritması ile
-elde edilmiş <EM>cryptographic</EM> özet değerini saklar.
+<B>Name</B>
+<LI><B>Email</B>
 </UL>
 </UL>
-</UL>
-files.xml dosyalarının doğrulanması için kullanılabilecek bilgi <EM>pisi-files.dtd</EM>
-dosyasında tanımlanmıştır.<BR>
-<BR>
-TODO: Örnek <BR>
-<BR>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_18.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_20.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
