--- a/web/projeler/pisi/pisi/node_6.html
+++ b/web/projeler/pisi/pisi/node_6.html
@@ -53,7 +53,7 @@
 
 <H3 ALIGN=center>Barış Metin</H3>
 
-<H3 ALIGN=center>(Pre-Alpha)</H3>
+<H3 ALIGN=center>(Alpha)</H3>
 <H3><A NAME="htoc6">2.4</A>&nbsp;&nbsp;Paket Kaynağı Gereksinimleri</H3>
 <UL><LI>
 Paketler CD, Internet, uzak dosya sistemi gibi çeşitli kaynaklardan
