--- a/web/projeler/pisi/pisi/node_8.html
+++ b/web/projeler/pisi/pisi/node_8.html
@@ -53,7 +53,7 @@
 
 <H3 ALIGN=center>Barış Metin</H3>
 
-<H3 ALIGN=center>(Pre-Alpha)</H3>
+<H3 ALIGN=center>(Alpha)</H3>
 <H3><A NAME="htoc8">2.6</A>&nbsp;&nbsp;Kurumsal Gereksinimler</H3>
 <UL><LI>
 Paket yöneticisi birden fazla paket kaynağı ile aynı anda sorunsuz
