--- a/web/projeler/pisi/pisi/node_9.html
+++ b/web/projeler/pisi/pisi/node_9.html
@@ -53,7 +53,7 @@
 
 <H3 ALIGN=center>Barış Metin</H3>
 
-<H3 ALIGN=center>(Pre-Alpha)</H3>
+<H3 ALIGN=center>(Alpha)</H3>
 <H2><A NAME="htoc9">3</A>&nbsp;&nbsp;Neden PİSİ?</H2>
 Hali hazırda varolan ve geniş bir kullanım oranına sahip paket yöneticileri
 (RPM, DPKG ve Portage) yukarda saydığımız gereksinimlerin kimilerini
@@ -68,7 +68,7 @@ görülmektedir. Bu araçlar basit olarak hazırlanmış ve zaman içinde
 ortaya çıkan ihtiyaçları karşılamak için sürekli yeni özellikler eklenerek
 bugünkü hallerine gelmişlerdir. Bunun getirdiği karmaşıklığı temizlemek
 için aşağıdaki iki ilkeyi temel alan yeni bir paket yöneticisinin
-yazılmasına verilmiştir:
+yazılmasına karar verilmiştir:
 <UL><LI>
 <B>Kurulum ve yapılandırma birbirinden ayrı iki görevdir</B>. Kurulum,
 yalnızca programların kurulumu, güncellenmesi ve kaldırılması esnasında
